2007-03-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-12-00
	* compliant with reorganization of FWCore for 140 series
	* added evf::StateMachine, which implements a uniform asyncronous
	state model to be used for all Filter Unit Applications. It must
	be linked against the xdaq2rc library, which is going to be
	provided with xdaq 3.7.3 within 1 or two days; until then, ask me
	for the hack!

2007-03-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-11-fix
	* adjust to reorganization of FWCore (MicroStateService).

2007-03-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-11
	* add FsmFailedEvent: this event can be fired to force the xdaq
	finite state machine into failed state, with the appropriate error
	message attached

2007-02-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-10
	* WebGUI: protect against xdata types which don't have toString()
	conversion supported.

2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-08
	* remove dependency on EPStateMachine, use XDAQ's
	toolbox::fsm::FinitStateMachine instead

2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-07 
	* add state transition 'Stop' (from 'Enabled' to
	'Configured') to EPStateMachine; requires clients to implement
	additional function stopAction()!

2006-11-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

        * tag V00-11-06
	* src/WebGUI.cc: fix resetCounters(), which did not do its job.

2006-11-10  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-11-05
	* insignificant fixes to src/WebGUI.cc and src/SealModule.cc
	regarding the transition to slc4/gcc3.45.

2006-10-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-04
	* keep track of parameters with an ItemRetrieveListener
	registered, and call cdata::InfoSpace::fireItemValueRetrieve to